// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > Snapshots > should match snapshot for all sizes 1`] = `
<div
  class="flex items-start rounded-lg border transition-all duration-200 p-3 text-sm bg-blue-50 border-blue-200"
  role="alert"
>
  <div
    class="flex-shrink-0"
  >
    <svg
      class="h-4 w-4 text-blue-500"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>
  <div
    class="flex-1 ml-3"
  >
    <div
      class="text-sm font-medium text-blue-800"
    >
      sm Alert
    </div>
  </div>
</div>
`;

exports[`Alert > Snapshots > should match snapshot for all sizes 2`] = `
<div
  class="flex items-start rounded-lg border transition-all duration-200 p-4 text-base bg-blue-50 border-blue-200"
  role="alert"
>
  <div
    class="flex-shrink-0"
  >
    <svg
      class="h-5 w-5 text-blue-500"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>
  <div
    class="flex-1 ml-3"
  >
    <div
      class="text-base font-medium text-blue-800"
    >
      md Alert
    </div>
  </div>
</div>
`;

exports[`Alert > Snapshots > should match snapshot for all sizes 3`] = `
<div
  class="flex items-start rounded-lg border transition-all duration-200 p-5 text-lg bg-blue-50 border-blue-200"
  role="alert"
>
  <div
    class="flex-shrink-0"
  >
    <svg
      class="h-6 w-6 text-blue-500"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>
  <div
    class="flex-1 ml-3"
  >
    <div
      class="text-lg font-medium text-blue-800"
    >
      lg Alert
    </div>
  </div>
</div>
`;

exports[`Alert > Snapshots > should match snapshot for error type with close button 1`] = `
<div
  class="flex items-start rounded-lg border transition-all duration-200 p-4 text-base bg-red-50 border-red-200"
  role="alert"
>
  <div
    class="flex-shrink-0"
  >
    <svg
      class="h-5 w-5 text-red-500"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>
  <div
    class="flex-1 ml-3"
  >
    <div
      class="text-base font-medium text-red-800"
    >
      Error occurred
    </div>
    <div
      class="text-sm mt-1 text-red-700"
    >
      Please try again
    </div>
  </div>
  <button
    aria-label="Close alert"
    class="ml-auto -mr-1 -mt-0.5 rounded-md p-1.5 inline-flex focus:outline-none focus:ring-2 focus:ring-offset-2 transition-colors text-red-500 hover:bg-red-100 focus:ring-red-500"
    type="button"
  >
    <svg
      class="h-4 w-4"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 18L18 6M6 6l12 12"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </button>
</div>
`;

exports[`Alert > Snapshots > should match snapshot for info type 1`] = `
<div
  class="flex items-start rounded-lg border transition-all duration-200 p-4 text-base bg-blue-50 border-blue-200"
  role="alert"
>
  <div
    class="flex-shrink-0"
  >
    <svg
      class="h-5 w-5 text-blue-500"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>
  <div
    class="flex-1 ml-3"
  >
    <div
      class="text-base font-medium text-blue-800"
    >
      Info Alert
    </div>
    <div
      class="text-sm mt-1 text-blue-700"
    >
      Info description
    </div>
  </div>
</div>
`;

exports[`Alert > Snapshots > should match snapshot for success type with icon 1`] = `
<div
  class="flex items-start rounded-lg border transition-all duration-200 p-4 text-base bg-green-50 border-green-200"
  role="alert"
>
  <div
    class="flex-shrink-0"
  >
    <svg
      class="h-5 w-5 text-green-500"
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
        stroke-linecap="round"
        stroke-linejoin="round"
      />
    </svg>
  </div>
  <div
    class="flex-1 ml-3"
  >
    <div
      class="text-base font-medium text-green-800"
    >
      Success!
    </div>
  </div>
</div>
`;
